@@ -1,5 +1,10 @@
 2004-09-28  Damien Sandras  <dsandras@gnome.org>
 
+	* src/calls_history_window.cpp, src/calls_history_window.h, 
+	src/main_window.cpp: Reimplemented a combo box.
+
+2004-09-28  Damien Sandras  <dsandras@gnome.org>
+
 	* lib/gnome_prefs_window.c: Fixed bug reported by Johnny. Thanks!
 
 	* lib/contacts/gm_contacts-remote.cpp, lib/contacts/gm_contacts.h: 
